# airealist-github-tips-and-tricks

./: .gitignore  README.md  pyproject.toml  requirements.txt
.github/: copilot-instructions.md
.github/instructions/: notebooks.instructions.md  tests.instructions.md
.github/prompts/: custom_instructions.prompt.md
data/: sample_text.txt
notebooks/: exploration.ipynb
src/: __init__.py  llm_plots.py
src/embeddings/: __init__.py  embeddings.py
src/sampling/: __init__.py  temperature.py
src/tokenization/: __init__.py  tokenizer.py
src/visualization/: __init__.py  plots.py
tests/: __init__.py  test_embeddings.py  test_temperature.py  test_tokenizer.py
